* Added: Display Conditions - Output HTML option for sections
* Added: Logo Grid - Option to apply custom styles to logo image or logo container
* Added: Logo Carousel - Background and padding options for logo title
* Fixed: Logo Carousel - Choose Arrow option was not working in the editor
* Fixed: Logo Carousel - Issue with Additional Custom Breakpoints
* Fixed: Gravity Forms - Empty validation error field was showing below file upload field

== 2.6.0 ==
Release date: October 7, 2021
* New: Animated Gradient Background extension
* Enhancement: Updated icons for Icon Type option in all the widgets

== 2.5.4 ==
Release date: August 23, 2021
* Fixed: PHP error in dashboard
* Fixed: Instagram Access Token option was not saving anything
* Enhancement: Added separate tab to manage extensions in PowerPack settings

== 2.5.3 ==
Release date: August 4, 2021
* Added: Posts – Link target option for title and thumbnail
* Added: Posts – Center Mode option for Carousel layout
* Added: Posts – Integration for The Events Calendar plugin
* Fixed: Posts - Non-Ajax Pagination was not working
* Fixed: JS file was not loading through wrapper link extension

== 2.5.2 ==
Release date: July 22, 2021
* Fixed: Price Menu - PHP error

== 2.5.1 ==
Release date: July 21, 2021
* Fixed: PHP error in Buttons widget

== 2.5.0 ==
Release date: July 21, 2021
* New: Content Reveal Widget
* Added: Pricing Table - Options to change HTML tag for title and subtitle
* Added: Price Menu - Option to change HTML tag for title
* Added: Buttons - Text shadow option
* Enhancement: Pricing Table - Updated Feature Text field with Textarea field
* Gravity Forms, Caldera Forms, WP Forms - Removed duplicate upgrade pro notice

== 2.4.2 ==
Release date: July 15, 2021
* Fixed: Team Member - HTML error when link is applied to title
* Fixed: Advanced Accordion - Border radius was not working when background is applied to title and content
* Fixed: Compatibility issues with PHP 8

== 2.4.1 ==
Release date: July 8, 2021